package bloxweb.credentials;

option java_package = "com.logicblox.bloxweb.authentication";

/**
 * Change password
 */
message ChangePasswordRequest
{
  required string user_name = 1;
  required string current_password = 2;
  required string new_password = 3;
}

/**
 * Reset password
 */
message ResetPasswordRequest
{
  // passwords can be reset either by email or username. If the
  // username is specified, then the email address is ignored.
  optional string user_name = 1;
  optional string email = 2;
}

/**
 * Change password using change token
 */
message ConfirmResetPasswordRequest
{
  required string change_token = 1;
  required string new_password = 2;
}

/**
 * Error
 */
message VoidResponse
{
  // English error, not necessarily suitable for presentation to the
  // user. If there was an error, then the error_code field is always
  // set as well.
  optional string error = 1;

  optional string error_code = 2;
}
